--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@tailwindcss/postcss": "^4.1.15",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^30.0.0",
@@ -66,7 +67,9 @@
     "jest-util": "^30.0.2",
     "lint-staged": "^16.2.5",
     "nx": "21.6.5",
+    "postcss": "^8.5.6",
     "prettier": "^2.6.2",
+    "tailwindcss": "^4.1.15",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
