--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,8 @@
   "useTabs": false,
   "arrowParens": "always",
   "bracketSameLine": false,
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
