--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "lint-staged": "^16.2.5",
     "nx": "21.6.5",
     "postcss": "^8.5.6",
-    "prettier": "^2.6.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^4.1.15",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
