--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
     "axios": "^1.6.0",
+    "daisyui": "^5.3.7",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
