--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,6 @@
 # Global code ownership
 # You are the code owner of all files except /public and /src directories
-* @admin
+* @sin-city-programmers/admin
 
 # Exclude public and src directories from global ownership
 /public/
