--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,8 +6,8 @@
     "name": "web"
   },
   "dependencies": {
-    "next": "~15.2.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "next": "16.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   }
 }
