--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -6,6 +6,13 @@
         "command": "next dev --port 4200 --webpack",
         "cwd": "apps/web"
       }
+    },
+    "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "next build --webpack",
+        "cwd": "apps/web"
+      }
     }
   }
 }
