--- a/nx.json
+++ b/nx.json
@@ -14,6 +14,7 @@
     ],
     "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"]
   },
+  "nxCloudId": "68f6ba7243a472003cd5645f",
   "plugins": [
     {
       "plugin": "@nx/js/typescript",
