--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@ out-tsc
 # dependencies
 node_modules
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # IDEs and editors
 /.idea
 .project
