feat: add MySQL Docker container configuration (#25)
- Add docker/docker-compose.yml with MySQL 8.0 service configuration
- Include health checks and volume persistence
- Auto-increment port (3306-3310) if port is in use
- Create docker/.env.example template for database credentials
- Update .gitignore for Docker and environment files
- Add Database Setup section to README.md
- Create comprehensive docs/DATABASE.md with:
  - Local development setup instructions
  - Volume management and data persistence guide
  - Backup and restore procedures
  - Production deployment considerations
  - Troubleshooting guide
- Organize all Docker files in /docker/ directory

Resolves #25

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,15 @@ test-output
 # Next.js
 .next
 out
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+docker/.env
+docker/.env.local
+
+# Docker
+docker/docker-compose.override.yml
+docker/mysql_data/
+*.sql.backup
