--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
           cache: 'npm'
 
       - run: npm ci --legacy-peer-deps
+      # - run: npm install --verbose
 
       # Run lint for all projects
       - run: npx nx run-many --no-cloud --target=lint
